Implement WeakRef Object
Related test262 test-cases has been removed from skip list.
Execpt two test-case since they need other feature to work (Finalization registry and async GC)

JerryScript-DCO-1.0-Signed-off-by: Bence Gabor Kis kisbg@inf.u-szeged.hu

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -57,6 +57,7 @@ Enum that contains JerryScript **object** value types:
  - JERRY_OBJECT_TYPE_SYMBOL - Symbol object
  - JERRY_OBJECT_TYPE_GENERATOR - Generator object
  - JERRY_OBJECT_TYPE_BIGINT - BigInt object
+ - JERRY_OBJECT_TYPE_WEAKREF - WeakRef object
 
 *New in version 2.4*.
 
