Add notification callback for Promise operations
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/01.CONFIGURATION.md
+++ b/docs/01.CONFIGURATION.md
@@ -53,6 +53,17 @@ To see how a profile file should be created, or what configuration options are a
 | CMake:  | `-DJERRY_PROFILE="path"`                     |
 | Python: | `--profile="path"`                           |
 
+### Promise callback
+
+Enables Promise event notification support. This feature allows setting a user callback, which is called when certain Promise related events occur such as
+creating a new Promise, resolving a Promise with a value, etc.
+
+| Options |                                              |
+|---------|----------------------------------------------|
+| C:      | `-DJERRY_PROMISE_CALLBACK=0/1`               |
+| CMake:  | `-DJERRY_PROMISE_CALLBACK=ON/OFF`            |
+| Python: | `--promise-callback=ON/OFF`                  |
+
 ### External context
 
 Enables external context support in the engine. By default, JerryScript uses a statically allocated context to store the current state of the engine internals.
